unpackaged/main/default/objects/Opportunity/fields/Opportunity_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number_Text__c</fullName>
    <description>Opportunity number text field to populate in click-approve email</description>
    <inlineHelpText>Opportunity number text field to populate in click-approve email</inlineHelpText>
    <label>Opportunity Number Text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>