unpackaged/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <defaultValue>IF( $RecordType.DeveloperName = &#39;B2C&#39; , &#39;B2C - Standard&#39;, null)</defaultValue>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2C - Standard</fullName>
            </value>
            <value>
                <fullName>B2C - Upgrade</fullName>
            </value>
            <value>
                <fullName>B2C - Renewal</fullName>
            </value>
            <value>
                <fullName>Self-Serve Standard</fullName>
            </value>
            <value>
                <fullName>Self-Serve Renewal</fullName>
            </value>
            <value>
                <fullName>Self-Serve Abandoned</fullName>
            </value>
            <value>
                <fullName>Marketing Automation</fullName>
            </value>
            <value>
                <fullName>B2C - Conversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>