unpackaged/main/default/objects/Opportunity/fields/Opportunity_Value_Unweighted__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Value_Unweighted__c</fullName>
    <description>Field will return (unweighted) projected opportunity amount if the total amount after discount field is blank since there is no products selected yet.</description>
    <formula>IF(HasOpportunityLineItem = false,  Project_Opportunity_Amount__c ,  Total_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Value (Unweighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>