unpackaged/main/default/objects/Opportunity/fields/Opportunity_Value_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Value_Weighted__c</fullName>
    <description>Field will return (weighted) projected opportunity amount if the total amount after discount field is blank since there is no products selected yet.</description>
    <formula>Probability  *  Opportunity_Value_Unweighted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Value (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>