unpackaged/main/default/objects/Opportunity/fields/Order_Date_Max_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_Max_Quote_Date__c</fullName>
    <description>Compute based on max createddate of quote.</description>
    <label>Order Date (Max Quote Date)</label>
    <summarizedField>Quote.CreatedDate__c</summarizedField>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>