unpackaged/main/default/objects/Opportunity/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Indicates the type of the Order which is used for pricing and for grouping orders</description>
    <inlineHelpText>Indicates the type of the Order which is used for pricing and for grouping orders</inlineHelpText>
    <label>Media Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Commercial</fullName>
                <default>true</default>
                <label>Direct Commercial</label>
            </value>
            <value>
                <fullName>House Guaranteed</fullName>
            </value>
            <value>
                <fullName>House Non-Guaranteed</fullName>
            </value>
            <value>
                <fullName>Labels AdCredit</fullName>
            </value>
            <value>
                <fullName>Labels Commercial</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Programmatic Guaranteed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>