unpackaged/main/default/objects/Opportunity/fields/Order_Type_Clone__c.field-meta.xml
<CustomField>
    <fullName>Order_Type_Clone__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract - New</fullName>
            </value>
            <value>
                <fullName>Contract - Upsell</fullName>
            </value>
            <value>
                <fullName>Contract - Renewal</fullName>
            </value>
            <value>
                <fullName>Contract - Make Good</fullName>
            </value>
            <value>
                <fullName>Dual-SO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>