unpackaged/main/default/objects/Opportunity/fields/Originated_From_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Originated_From_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, then don&#39;t create a Sales Order back in NetSuite.</description>
    <label>Originated From NetSuite</label>
    <type>Checkbox</type>
</CustomField>