unpackaged/main/default/objects/Opportunity/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <label>Payment Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>Braintree</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>