unpackaged/main/default/objects/Opportunity/fields/Payment_terms_AR_Override__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms_AR_Override__c</fullName>
    <inlineHelpText>Use this field to override the Payment terms for this specific deal.</inlineHelpText>
    <label>Payment terms AR Override</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>