unpackaged/main/default/objects/Opportunity/fields/Payment_Terms_In_Effect__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_In_Effect__c</fullName>
    <formula>IF( 
   /* OPPORTUNITY OVERRIDE EXIST. USE THAT... */
   ISBLANK(TEXT(Payment_terms_AR_Override__c)), 
   
0,
   VALUE(TEXT(Payment_terms_AR_Override__c)) 
)</formula>
    <label>Payment terms in effect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>