unpackaged/main/default/objects/Opportunity/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>credit-card</fullName>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>bank-transfer</fullName>
                <label>Bank Transfer</label>
            </value>
            <value>
                <fullName>paypal</fullName>
                <label>Paypal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>