unpackaged/main/default/objects/Opportunity/fields/PG_Product_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>PG_Product_Max_Discount__c</fullName>
    <description>Calculate the MAX discount of PG products.  Will be used in approvals</description>
    <label>PG Product Max Discount</label>
    <summarizedField>OpportunityLineItem.Discounted__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type__c</field>
        <operation>equals</operation>
        <value>PG</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>