unpackaged/main/default/objects/Opportunity/fields/PG_Tenure__c.field-meta.xml
<CustomField>
    <fullName>PG_Tenure__c</fullName>
    <label>PG Tenure</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>