unpackaged/main/default/objects/Opportunity/fields/PGI_Product_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>PGI_Product_Max_Discount__c</fullName>
    <label>PGI Product Max Discount</label>
    <summarizedField>OpportunityLineItem.Discounted__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type__c</field>
        <operation>equals</operation>
        <value>PGI</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>