unpackaged/main/default/objects/Opportunity/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <inlineHelpText>Has Power agreed to written mutual plan? Is it in writing?</inlineHelpText>
    <label>Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>