unpackaged/main/default/objects/Opportunity/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <inlineHelpText>Who makes the decision? What is their decision making process?</inlineHelpText>
    <label>Power</label>
    <length>255</length>
    <type>Text</type>
</CustomField>