unpackaged/main/default/objects/Opportunity/fields/PrepaymentRequired__c.field-meta.xml
<CustomField>
    <fullName>PrepaymentRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepayment Required</label>
    <type>Checkbox</type>
</CustomField>