unpackaged/main/default/objects/Opportunity/fields/Primary_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Sales Order linked to this Opportunity</description>
    <inlineHelpText>Primary Sales Order linked to this Opportunity</inlineHelpText>
    <label>Primary Sales Order</label>
    <referenceTo>csmso__Sales_Order__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>