unpackaged/main/default/objects/Opportunity/fields/Primary_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Primary_Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Ad Server Salesperson</description>
    <label>Primary Salesperson</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Ad Sales</value>
        </filterItems>
        <filterItems>
            <field>csdf__User__c.csdf__Ad_Server__r.csdf__Network_Code__c</field>
            <operation>equals</operation>
            <value>133034368</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>B2B</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>csdf__User__c</referenceTo>
    <relationshipLabel>Opportunities (Salesperson)</relationshipLabel>
    <relationshipName>SalespersonOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>