unpackaged/main/default/objects/Opportunity/fields/Pro_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pro_Rate__c</fullName>
    <label>Pro Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>