unpackaged/main/default/objects/Opportunity/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awards</fullName>
            </value>
            <value>
                <fullName>China Solutions</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Agent Discretionary</fullName>
            </value>
            <value>
                <fullName>Agent Subscriptions</fullName>
            </value>
            <value>
                <fullName>Developer Listings</fullName>
            </value>
            <value>
                <fullName>Online Advertising</fullName>
            </value>
            <value>
                <fullName>Marketing Services</fullName>
            </value>
            <value>
                <fullName>Database Marketing</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>FinTech</fullName>
            </value>
            <value>
                <fullName>FastKey</fullName>
            </value>
            <value>
                <fullName>Data MPD</fullName>
            </value>
            <value>
                <fullName>Discretionary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>