unpackaged/main/default/objects/Opportunity/fields/Project_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Project_Opportunity_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>A field for the user to input estimated value of the opportunity/order when no product(s) has been identified.</description>
    <inlineHelpText>Input the estimated budget of the client for this deal if no product(s) is/are identified.</inlineHelpText>
    <label>Project Opportunity Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>