unpackaged/main/default/objects/Opportunity/fields/Proxy_Customer__c.field-meta.xml
<CustomField>
    <fullName>Proxy_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proxy Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Proxy Customer)</relationshipLabel>
    <relationshipName>Opportunities9</relationshipName>
    <type>Lookup</type>
</CustomField>