unpackaged/main/default/objects/Opportunity/fields/Push_As_NetSuite_Project__c.field-meta.xml
<CustomField>
    <fullName>Push_As_NetSuite_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push As NetSuite Project</label>
    <type>Checkbox</type>
</CustomField>