unpackaged/main/default/objects/Opportunity/fields/Push_To_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Push_To_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push To NetSuite</label>
    <type>Checkbox</type>
</CustomField>