unpackaged/main/default/objects/Opportunity/fields/Re_print_Contract__c.field-meta.xml
<CustomField>
    <fullName>Re_print_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether a new contract needs to be generated and reprint.
Update Yes - whenever oppty / line items is changed
Update No - after contract is generated (script runs to copy Oppty to Quotes)</description>
    <label>Re-print Contract</label>
    <type>Checkbox</type>
</CustomField>