unpackaged/main/default/objects/Opportunity/fields/Reason_for_manual_signature__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_manual_signature__c</fullName>
    <label>Reason for manual signature</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>