unpackaged/main/default/objects/Opportunity/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>This field is for Salesperson to input any specific details that need to be reflected on the Sales Order Contract document, this is as per NetSuite.</description>
    <inlineHelpText>Input any specific details that need to be reflected on the Sales Order Contract document (max 1000 characters allowed)</inlineHelpText>
    <label>Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>