unpackaged/main/default/objects/Opportunity/fields/Renewal_State__c.field-meta.xml
<CustomField>
    <fullName>Renewal_State__c</fullName>
    <label>Renewal State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual Month</fullName>
            </value>
            <value>
                <fullName>Actual Month +1</fullName>
            </value>
            <value>
                <fullName>Early Bird</fullName>
            </value>
            <value>
                <fullName>Back to Back Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>