unpackaged/main/default/objects/Opportunity/fields/Required_FOC_Approval__c.field-meta.xml
<CustomField>
    <fullName>Required_FOC_Approval__c</fullName>
    <formula>IF(and(to_FOC_Approval__c=true,FOC_Approved__c=false),&quot;FOC; &quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required FOC Approval</label>
    <type>Text</type>
</CustomField>