unpackaged/main/default/objects/Opportunity/fields/Required_VIP_Approval__c.field-meta.xml
<CustomField>
    <fullName>Required_VIP_Approval__c</fullName>
    <formula>IF(AND(to_VIP_Approval__c=true,VIP_Approved__c=false),&quot;VIP; &quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required VIP Approval</label>
    <type>Text</type>
</CustomField>