unpackaged/main/default/objects/Opportunity/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Channel_Tier__c</field>
            <operation>equals</operation>
            <value>Reseller</value>
        </filterItems>
        <infoMessage>Value does not exist or does not match filter criteria.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Reseller)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>