unpackaged/main/default/objects/Opportunity/fields/Sales_Period__c.field-meta.xml
<CustomField>
    <fullName>Sales_Period__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Period</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Sales_Period__c.Period_Start__c</field>
            <operation>lessOrEqual</operation>
            <valueField>$Source.OMC_Submitted_Time__c</valueField>
        </filterItems>
        <filterItems>
            <field>Sales_Period__c.Period_End__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>$Source.OMC_Submitted_Time__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Period__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>