unpackaged/main/default/objects/Opportunity/fields/Send_SO_Status_to_SO__c.field-meta.xml
<CustomField>
    <fullName>Send_SO_Status_to_SO__c</fullName>
    <description>This field is used to send the correct Sales Order status to the primary SO when the Agreement Status is updated.  See https://jira.spotify.net/browse/FSSC-41582 for more details.</description>
    <formula>CASE(Agreement_Status__c, 
&quot;Out for Signature&quot;, &quot;Pending Customer Approval&quot;, 
&quot;Waiting for Counter-Signature&quot;, &quot;Pending Customer Approval&quot;,
&quot;Signed&quot;, IF( SO_for_Customer_Approval__r.In_Retraction__c = false, &quot;Pending Booking&quot;, &quot;Pending Legal Approval&quot;),
&quot;Cancelled / Declined&quot;, &quot;Rejected&quot;,
&quot;Signed via Client IO Link&quot;, IF( SO_for_Customer_Approval__r.In_Retraction__c = false, &quot;Pending Booking&quot;, &quot;Pending Legal Approval&quot;),
NULL)</formula>
    <label>Send SO Status to SO</label>
    <type>Text</type>
</CustomField>