unpackaged/main/default/objects/Opportunity/fields/signature_type__c.field-meta.xml
<CustomField>
    <fullName>signature_type__c</fullName>
    <label>signature type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>