unpackaged/main/default/objects/Opportunity/fields/Situation__c.field-meta.xml
<CustomField>
    <fullName>Situation__c</fullName>
    <inlineHelpText>What are the developer’s pain points? Can the paints points be directly related to revenue or profit?</inlineHelpText>
    <label>Situation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>