unpackaged/main/default/objects/Opportunity/fields/SO_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>SO_Bill_To_Account__c</fullName>
    <description>Bill To Account</description>
    <formula>IF( SO_Media_Agency__r.Id != &#39;&#39;, SO_Media_Agency__r.Id,  Account.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bill To Account</inlineHelpText>
    <label>Bill To Account</label>
    <type>Text</type>
</CustomField>