unpackaged/main/default/objects/Opportunity/fields/SO_Booking_Contact__c.field-meta.xml
<CustomField>
    <fullName>SO_Booking_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Booking Contact</description>
    <inlineHelpText>Booking Contact</inlineHelpText>
    <label>Booking Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_cs</relationshipName>
    <type>Lookup</type>
</CustomField>