unpackaged/main/default/objects/Opportunity/fields/SO_Creation_Allowed__c.field-meta.xml
<CustomField>
    <fullName>SO_Creation_Allowed__c</fullName>
    <description>Identify if the SO can be created from the Opp or not depending on business rules</description>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identify if the SO can be created from the Opp or not depending on business rules</inlineHelpText>
    <label>SO - Creation Allowed?</label>
    <type>Checkbox</type>
</CustomField>