unpackaged/main/default/objects/Opportunity/fields/SO_Creation_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_Creation_PO_Number__c</fullName>
    <description>If Account.PO Number Required? = true then set SO Creation - PO Number = &#39;&#39;, else &#39;Not required by Client&#39;</description>
    <formula>IF( Account.PO_Number_Required__c = TRUE, &#39;&#39;, &#39;Not required by Client&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Account.PO Number Required? = true then set SO Creation - PO Number = &#39;&#39;, else &#39;Not required by Client&#39;</inlineHelpText>
    <label>SO Creation - PO Number</label>
    <type>Text</type>
</CustomField>