unpackaged/main/default/objects/Opportunity/fields/SO_Creation_Primary_SO_flag__c.field-meta.xml
<CustomField>
    <fullName>SO_Creation_Primary_SO_flag__c</fullName>
    <description>If SO - First SO created? = false then set Primary SO = true, else false</description>
    <formula>IF(SO_First_SO_created__c = false, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If SO - First SO created? = false then set Primary SO = true, else false</inlineHelpText>
    <label>SO Creation - Primary SO flag</label>
    <type>Checkbox</type>
</CustomField>