unpackaged/main/default/objects/Opportunity/fields/SO_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>SO_Credit_Status__c</fullName>
    <description>Credit Status</description>
    <inlineHelpText>Credit Status</inlineHelpText>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Credit Stop</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>