unpackaged/main/default/objects/Opportunity/fields/SO_First_SO_created__c.field-meta.xml
<CustomField>
    <fullName>SO_First_SO_created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the first SO was created and prevents further changes on some fields</description>
    <inlineHelpText>Indicates that the first SO was created and prevents further changes on some fields</inlineHelpText>
    <label>SO - First SO created?</label>
    <type>Checkbox</type>
</CustomField>