unpackaged/main/default/objects/Opportunity/fields/SO_for_Customer_Approval__c.field-meta.xml
<CustomField>
    <fullName>SO_for_Customer_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SO for Customer Approval</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>csmso__Sales_Order__c.csmso__Opportunity__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <infoMessage>Select a Sales Order that is attached to this Opportunity.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>csmso__Sales_Order__c</referenceTo>
    <relationshipLabel>Opportunities (SO for Customer Approval)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>