unpackaged/main/default/objects/Opportunity/fields/SO_Killed_SO__c.field-meta.xml
<CustomField>
    <fullName>SO_Killed_SO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates when associated SO.Status = Reserved, sets all associated SO to Status = Killed.</description>
    <inlineHelpText>Indicates when associated SO.Status = Reserved, sets all associated SO to Status = Killed.</inlineHelpText>
    <label>SO - Killed SO</label>
    <type>Checkbox</type>
</CustomField>