unpackaged/main/default/objects/Opportunity/fields/SO_Media_Agency__c.field-meta.xml
<CustomField>
    <fullName>SO_Media_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agency</description>
    <inlineHelpText>Agency</inlineHelpText>
    <label>Media Agency (don&#39;t use)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_cs</relationshipName>
    <type>Lookup</type>
</CustomField>