unpackaged/main/default/objects/Opportunity/fields/SO_Media_Agency_Discount__c.field-meta.xml
<CustomField>
    <fullName>SO_Media_Agency_Discount__c</fullName>
    <description>Media Agency Discount</description>
    <inlineHelpText>Media Agency Discount</inlineHelpText>
    <label>Media Agency Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>