unpackaged/main/default/objects/Opportunity/fields/SO_Order__c.field-meta.xml
<CustomField>
    <fullName>SO_Order__c</fullName>
    <description>This is for display on screen and print contract. SO Order# will be SF Record ID after implementation. There will be another SO# which comes from NS.</description>
    <formula>Id</formula>
    <inlineHelpText>Salesforce Opportunity ID</inlineHelpText>
    <label>SO Order#</label>
    <type>Text</type>
</CustomField>