unpackaged/main/default/objects/Opportunity/fields/SO_Process_Message__c.field-meta.xml
<CustomField>
    <fullName>SO_Process_Message__c</fullName>
    <description>Holds value for Sales Order warning message</description>
    <formula>&#39;Please make sure to populate any mandatory fields on the SO Details tab and to confirm information on SO Details - Pricing section is correct before add any Products&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Holds value for Sales Order warning message</inlineHelpText>
    <label>SO Process Message</label>
    <type>Text</type>
</CustomField>