unpackaged/main/default/objects/Opportunity/fields/SO_Process_Message_Severity__c.field-meta.xml
<CustomField>
    <fullName>SO_Process_Message_Severity__c</fullName>
    <description>Holds value for Sales Order warning message</description>
    <formula>&#39;warning&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Holds value for Sales Order warning message</inlineHelpText>
    <label>SO Process Message Severity</label>
    <type>Text</type>
</CustomField>